--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,13 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.12</version>
+            <version>1.18.24</version>
             <optional>true</optional>
         </dependency>        <!--引入json支持-->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.80.Final</version>
+        </dependency>
     </dependencies>
 </project>
