--- a/pom.xml
+++ b/pom.xml
@@ -25,5 +25,11 @@
             <artifactId>netty-all</artifactId>
             <version>4.1.80.Final</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.alibaba.fastjson2/fastjson2 -->
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+            <version>2.0.20</version>
+        </dependency>
     </dependencies>
 </project>
