--- a/pom.xml
+++ b/pom.xml
@@ -36,5 +36,10 @@
             <artifactId>fastjson2</artifactId>
             <version>2.0.20</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
     </dependencies>
 </project>
