--- a/common-client/pom.xml
+++ b/common-client/pom.xml
@@ -10,7 +10,12 @@
     <packaging>jar</packaging>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>common-server</artifactId>
+    <artifactId>common-client</artifactId>
+
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
 
     <dependencies>
         <dependency>
